apps/base/seerr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`requests.kagiso.me`)
      kind: Rule
      middlewares:
        - name: ingress-secure-headers@kubernetescrd
        - name: ingress-compress@kubernetescrd
        - name: ingress-crowdsec-bouncer@kubernetescrd
      services:
        - name: seerr
          port: 80
  tls: {}
